# gwhere

./: .gitignore  AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  Makefile.win  NEWS  README  README.md  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in  configure.scan  gwhere.desktop  gwhere.spec.in  gwhere.xpm  mkinstalldirs
data/: Makefile.am  gwhere.desktop
debian/: Makefile.am  Makefile.in  README.Debian  TODO.Debian  changelog  control  copyright  files  menu  postinst  postrm  prerm  rules  watch
doc/: Doxyfile.in  Makefile.am  Makefile.in  README.Cygwin  README.Darwin  README.FreeBSD  README.Linux  README.MacOS  README.MacOSX  README.NetBSD  README.OpenBSD  README.Win32  gwhere.1
doc/license/: Makefile.am  Makefile.in  license.de  license.en  license.es  license.fr  license.hu  license.pl
doc/man/: Makefile.am  Makefile.in  gwhere.1
po/: LINGUAS  Makefile.in  POTFILES.in  ar.nsh  ar.po  cs-windows-1250.po  cs.nsh  cs.po  de.nsh  de.po  el.nsh  el.po  en.nsh  es.nsh  es.po  fr.nsh  fr.po  gwhere.pot  hu.nsh  hu.po  it.nsh  it.po  nl.nsh  nl.po  pl.nsh  pl.po  pt.nsh  pt.po  ru.nsh  ru.po  sr.nsh  sr.po
slackware/: GWhere.desktop  Makefile.am  Makefile.in  README.SlackPackage  gwhere.SlackBuild  slack-desc
src/: Makefile.am  Makefile.in  Makefile.win  gwapplicationmanager.c  gwapplicationmanager.h  gwcatalogmanager.c  gwcatalogmanager.h  gwdevicemanager.c  gwdevicemanager.h  gwguimanager.c  gwguimanager.h  gwhelper.c  gwhelper.h  gwhere.res  gwpluginsmanager.c  gwpluginsmanager.h  gwsearchengine.c  gwsearchengine.h  gwsupermount.c  gwsupermount.h  gwsupport.c  gwsupport.h  main.c  main.h
src/data/: Makefile.am  Makefile.in  Makefile.win  gwdata.h  gwenginequicksearch.c  gwenginequicksearch.h  gwscandiskinfo.c  gwscandiskinfo.h  gwsearchiteminfo.c  gwsearchiteminfo.h  gwsettings.c  gwsettings.h  gwstringbuffer.c  gwstringbuffer.h  gwuserquicksearch.c  gwuserquicksearch.h  gwvirtualfilesystemstats.c  gwvirtualfilesystemstats.h
src/db/: Makefile.am  Makefile.in  Makefile.win  gwdb.h  gwdbcatalog.c  gwdbcatalog.h  gwdbcategory.c  gwdbcategory.h  gwdbcontext.c  gwdbcontext.h  gwdbdisk.c  gwdbdisk.h  gwdbdisktype.h  gwdbfile.c  gwdbfile.h
src/gui/: Makefile.am  Makefile.in  Makefile.win  gtktextarea.c  gtktextarea.h  gwcapturebox.c  gwcapturebox.h  gwcategorieseditbox.c  gwcategorieseditbox.h  gwcomboboxcategories.c  gwcomboboxcategories.h  gwdialogbox.c  gwdialogbox.h  gwfileselectionbox.c  gwfileselectionbox.h  gwgui.h  gwmenu.c  gwmenu.h  gwmenuaction.c  gwmenuaction.h  gwmenuactioncallback.c  gwmenuactioncallback.h  gwmenufile.c  gwmenufile.h  gwmenufilecallback.c  gwmenufilecallback.h  gwmenuhelp.c  gwmenuhelp.h  gwmenuhelpcallback.c  gwmenuhelpcallback.h  gwmenuoptions.c  gwmenuoptions.h  gwmenuoptionscallback.c  gwmenuoptionscallback.h  gwmenupopup.c  gwmenupopup.h  gwmenupopupcallback.c  gwmenupopupcallback.h  gwmisc.c  gwmisc.h  (+63 more)
src/plugins/: Makefile.am  Makefile.in  Makefile.win  gwcatalog.h  gwdescr.h  gwplugininfo.c  gwplugininfo.h
src/plugins/catalog/: Makefile.am  Makefile.in
src/plugins/catalog/csv/: Makefile.am  Makefile.in  Makefile.win  csv.c
src/plugins/catalog/gwcatalog/: Makefile.am  Makefile.in  Makefile.win  gwcatalog.c
src/plugins/descr/: Makefile.am  Makefile.in  Makefile.win  avi.c  descript_ion.c  file_id_diz.c  html.c  mp3.c  mpc.c  mppdec.h
src/res/: Makefile.am  Makefile.in  Makefile.win  catalog.xpm  cdrom.xpm  close.xpm  file.xpm  floppy.xpm  folder.xpm  gwicons.c  gwicons.h  gwres.h  hard_disk.xpm  locked_folder.xpm  new.xpm  open.xpm  open_folder.xpm  parent_folder.xpm  save.xpm  zip_disk.xpm
src/tools/: Makefile.am  Makefile.in  Makefile.win  gwencode.c  gwencode.h  gwfile.c  gwfile.h  gwfilesystem.c  gwfilesystem.h  gwmail.c  gwmail.h  gwpropertiesfile.c  gwpropertiesfile.h  gwstring.c  gwstring.h  gwtools.h
win32/: Makefile.am  Makefile.in  allusers.ini  config.h.in  gwhere.nsi.in  gwhere.rc
win32/nsis/Contrib/Language files/: SpanishAR.nlf
win32/nsis/Contrib/Modern UI/Language files/: Portuguese.nsh  SpanishAR.nsh
