EXTRA_DIST = config.h.in \
		gwhere.ico \
		gwhere.nsi.in \
		gwhere.rc \
		gwhere_install.bmp \
		allusers.ini \
		../po/ar.nsh \
		../po/cs.nsh \
		../po/de.nsh \
		../po/el.nsh \
		../po/en.nsh \
		../po/es.nsh \
		../po/fr.nsh \
		../po/hu.nsh \
		../po/it.nsh \
		../po/pl.nsh \
		../po/pt.nsh \
		../po/ru.nsh \
		../po/sr.nsh
